# emake

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: build.yml  builder.yml
builder/: glibc.Containerfile  musl.Containerfile
emake/: __init__.py  __main__.py  build.py  build.yml.tpl  cli.py  config.py  executable.py  lint.py  pyproject.toml.tpl  test.py  venv.py  wheel.py
tests/: test_emake.py
