[project]
name = "emake"
version = "0.0.3"
description = "A Python module to replace Makefile workflows"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "Eeems", email = "eeems@eeems.email"}]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Build Tools",
]
keywords = [
    "build",
    "make",
    "makefile",
    "automation",
    "development",
]
dependencies = ['packaging']
dynamic = ["readme"]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
emake = "emake.cli:main"

[build-system]
requires = ["setuptools>=70.1", "nuitka>=4.0.6"]
build-backend = "nuitka.distutils.Build"

[tool.setuptools]
packages = ["emake"]

[tool.setuptools.dynamic]
readme = {file= ["README.md"], content-type = "text/markdown"}

[tool.setuptools.package-data]
emake = ["*.tpl"]

[tool.ruff]
exclude = [".venv", "build"]

[tool.ruff.lint]
extend-select = [
    "UP",
    "PL",
    "ANN",
    "S",
]
ignore = [
    "PLW0603",
    "PLR2004",
    "PLR0915",
    "PLR0912",
    "PLR0911",
    "PLR6301",
    "PLR0913",
    "S101",
    "S404",
    "S603",
    "S607",
    "ANN401",
    "ANN001",
    "ANN003",
]

[tool.pyright]
exclude = [".venv", "build"]
